er/src/components/Partners.css
/* POWERED BY */
#powered-by-container {
    position: relative;
    box-shadow: 0px -6px 0px 0px rgb(188, 16, 56);
    -webkit-box-shadow: 0px -6px 0px 0px rgb(188, 16, 56);
    -moz-box-shadow: 0px -6px 0px 0px rgba(188, 16, 56, 1);
    padding: 1rem 0;
}

#powered-by-heading {
    background: #BC1038;
    border-radius: 0.5rem 0.5rem 0 0;
    padding: 0 2rem;
    position: absolute;
    top: -16px;
    transform: translateX(-50%);
    left: 50%;
}

#powered-by-container h3 {
    margin: 0;
    font-family: zeitung-pro-variable, Arial, Helvetica, sans-serif;
    font-size: 10px;
    color: #ffffff;
    text-align: center;
}

#powered-by-container--inner {
    flex-direction: column;
    justify-content: space-around;
    border-radius: 1.5rem 1.5rem 0 0;
    display: flex;
    align-items: center;
    margin: 0 2vw;
}

#powered-by-partners {
    display: grid;
    grid-template-columns: repeat(4, 0.5fr);
    grid-template-rows: repeat(2, 0.5fr);
    grid-row-gap: 0.125rem;
    justify-items: center;
    align-items: center;
    background: #ffffff;
    padding-top: 0;
}

.powered-by-logo-container {
    display: flex;
    width: 100%;
    align-items: center;
    justify-content: center;
}

.powered-by-logo-container.powered-by-logo-container--public {
    display: flex;
    align-items: flex-end;
    margin: 0.5rem 0 0 0;
    padding-bottom: 0.5rem;
}

.powered-by-logo {
    display: flex;
    height: 100%;
    flex: 1;
}

a.powered-by-logo img {
    max-width: 100%;
}

p.partner-logo.public {
    margin: 0;
}

.powered-by-logo-container.public-text p {
    font-family: zeitung-pro-variable, Arial, Helvetica, sans-serif;
    font-size: 8px;
    color: #111317;
}

@media screen and (max-width: 900px) {
    #powered-by-partners {
        padding-top: 0.75rem;
    }

    .powered-by-logo-container.powered-by-logo-container--public {
        grid-column-start: 1;
        grid-column-end: 5;
    }

    p.partner-logo.public {
        margin: 0;
        font-size: 0.75em;
        text-align: center;
        line-height: 1em;
    }

    #powered-by-container h3 {
        font-size: 0.75em;
        line-height: 2em;
    }
}

@media screen and (min-width: 900px) {
    #powered-by-partners {
        display: flex;
        flex-direction: column;
    }

    .powered-by-partners--container {
        display: flex;
        flex-direction: row;
        align-items: center;
        gap: 7.1vw;
    }

    .powered-by-logo-container.powered-by-logo-container--public {
        grid-column-start: 1;
        grid-column-end: 8;
    }
}

